--- a/PlexAppRESTLibrary/pom.xml
+++ b/PlexAppRESTLibrary/pom.xml
@@ -49,6 +49,12 @@
          <version>1.3</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>com.pivotallabs</groupId>
+         <artifactId>robolectric</artifactId>
+         <version>1.1</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
