--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
-   <name>Maven Default Project</name>
+   <name>PlexApp Google TV Client Parent</name>
 
    <groupId>com.github.kingargyle.plexapplibrary</groupId>
    <artifactId>plexapp-parent</artifactId>
@@ -9,6 +9,7 @@
 
    <modules>
      <module>PlexAppRESTLibrary</module>
+     <module>LeftNavBarLibrary</module>
    </modules>
 
 </project>
