Add a basic shell for the PlexApp using the LeftNavBarLibrary

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
    <modules>
      <module>PlexAppRESTLibrary</module>
      <module>LeftNavBarLibrary</module>
+     <module>PlexAppClient</module>
    </modules>
 
 </project>
