Add initial stub layout for Movie Browser.
Some of these images come from Confluence, Influence, and Aeon XBMC skins.

--- a/PlexAppClient/project.properties
+++ b/PlexAppClient/project.properties
@@ -14,3 +14,4 @@
 target=Google Inc.:Google TV Addon:12
 android.library.reference.1=../LeftNavBarLibrary
 android.library.reference.2=../PlexAppRESTLibrary
+android.library.reference.3=../../../adt-dev/workspace/plexa-appl-client/gridlayout_v7
