--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="12"
         android:targetSdkVersion="13" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +24,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.plexappclient.MovieBrowserActivity"
+            android:label="@string/title_activity_movie_browser" >
         </activity>
     </application>
 
