--- a/PlexAppClient/project.properties
+++ b/PlexAppClient/project.properties
@@ -11,7 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google TV Addon:12
+target=android-13
 android.library.reference.1=../LeftNavBarLibrary
 android.library.reference.2=../PlexAppRESTLibrary
-android.library.reference.3=../../../adt-dev/workspace/plexa-appl-client/gridlayout_v7
