--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.plexappclient"
+    package="com.github.kingargyle.plexappclient"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,18 +16,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.plexappclient.PlexAppMainActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.NoActionBar" >
+            android:name="com.github.kingarygle.plexappclient.ui.browse.MovieBrowserActivity"
+            android:label="@string/title_activity_movie_browser" >
+        </activity>
+        <activity
+            android:name="com.github.kingargyle.plexappclient.MainActivity"
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.example.plexappclient.MovieBrowserActivity"
-            android:label="@string/title_activity_movie_browser" >
         </activity>
     </application>
 
