--- a/PlexAppClient/pom.xml
+++ b/PlexAppClient/pom.xml
@@ -30,8 +30,11 @@
          <version>0.1.0-SNAPSHOT</version>
          <type>apklib</type>
       </dependency>
-      <!-- <dependency> <groupId>com.novoda.imageloader</groupId> <artifactId>imageloader-core</artifactId> <version>1.5.6</version> 
-         </dependency> -->
+      <dependency>
+         <groupId>com.novoda.imageloader</groupId>
+         <artifactId>imageloader-core</artifactId>
+         <version>1.5.7</version> 
+       </dependency>
    </dependencies>
 
    <build>
