--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -21,14 +21,16 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true" >
         <activity
             android:name="com.github.kingargyle.plexappclient.ui.browser.movie.MovieBrowserActivity"
             android:label="@string/title_activity_movie_browser" >
         </activity>
         <activity
             android:name="com.github.kingargyle.plexappclient.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:hardwareAccelerated="false" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
