--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true" >
+        android:hardwareAccelerated="true"
+        android:largeHeap="true" >
         <activity
             android:name="com.github.kingargyle.plexappclient.ui.browser.movie.MovieBrowserActivity"
             android:label="@string/title_activity_movie_browser"
