--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RAISED_THREAD_PRIORITY"/>    
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -19,7 +20,7 @@
     <application
         android:name="com.github.kingargyle.plexappclient.SerenityApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/media_film"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
@@ -39,12 +40,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
         <activity
             android:name="com.github.kingargyle.plexappclient.ui.browser.tv.TVShowBrowserActivity"
             android:label="@string/title_activity_tvbrowser_show" 
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
+        <activity
+            android:name="com.github.kingargyle.plexappclient.ui.browser.tv.seasons.TVShowSeasonBrowserActivity"
+            android:label="@string/title_activity_tvbrowser_show_season" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        </activity>
+        
         <activity android:name=".ui.preferences.SerenityPreferenceActivity"></activity>
     </application>
 
