Clean up some code, remove unused apklib, and add better error reporting.
Added error reporting for when a server connection couldn't be opened.
This should help in debugging some cases where a connection can't be made
from the Google TV device to the backend plex media server.  The
base URL including IP Address and Port number will be displayed.

--- a/tests/plexapp-rest-library-tests/pom.xml
+++ b/tests/plexapp-rest-library-tests/pom.xml
@@ -97,6 +97,7 @@
                   <platform>13</platform>
                </sdk>
                <deleteConflictingFiles>true</deleteConflictingFiles>
+               <generateApk>false</generateApk>
             </configuration>
             <extensions>true</extensions>
          </plugin>
