--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -56,6 +56,12 @@
             android:label="@string/title_activity_tvbrowser_show_episodes" 
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
+        <activity
+            android:name="com.github.kingargyle.plexappclient.ui.video.player.SerenitySurfaceViewVideoActivity"
+            android:label="@string/video_title" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        </activity>
+        
         
         <activity android:name=".ui.preferences.SerenityPreferenceActivity"></activity>
     </application>
