--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
    <groupId>com.github.kingargyle.plexapplibrary</groupId>
    <artifactId>plexapp-parent</artifactId>
-   <version>0.7.0-SNAPSHOT</version>
+   <version>0.6.1</version>
    <packaging>pom</packaging>
 
    <modules>
