--- a/leftnavbarlibrary/pom.xml
+++ b/leftnavbarlibrary/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>com.github.kingargyle.plexapplibrary</groupId>
       <artifactId>plexapp-parent</artifactId>
-      <version>0.6.1</version>
+      <version>0.7.0-SNAPSHOT</version>
    </parent>
 
    <groupId>com.google.tv.sample</groupId>
