--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:name="com.github.kingargyle.plexappclient.SerenityApplication"
         android:allowBackup="true"
-        android:icon="@drawable/serenity_logo"
+        android:icon="@drawable/serenity_logo2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
