--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -4,13 +4,13 @@
    <parent>
       <groupId>com.github.kingargyle.plexapplibrary</groupId>
       <artifactId>plexapp-parent</artifactId>
-      <version>0.7.0-SNAPSHOT</version>
+      <version>0.7.0</version>
 
    </parent>
 
    <groupId>com.github.kingargyle.plexapplibrary</groupId>
    <artifactId>plexapp-tests-parent</artifactId>
-   <version>0.7.0-SNAPSHOT</version>
+   <version>0.7.0</version>
    <packaging>pom</packaging>
 
    <modules>
