--- a/PlexAppClient/pom.xml
+++ b/PlexAppClient/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>com.github.kingargyle.plexapplibrary</groupId>
       <artifactId>plexapp-parent</artifactId>
-      <version>0.7.1</version>
+      <version>0.8.0-SNAPSHOT</version>
    </parent>
 
    <groupId>com.github.kingargyle.plexapplibraray</groupId>
@@ -21,7 +21,7 @@
       <dependency>
          <groupId>com.github.kingargyle.plexapplibrary</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>0.7.1</version>
+         <version>0.8.0-SNAPSHOT</version>
          <type>apklib</type>
       </dependency>      
       <dependency>
@@ -99,7 +99,7 @@
             <dependency>
                <groupId>com.github.kingargyle.plexapplibrary</groupId>
                <artifactId>plexapp-rest-library</artifactId>
-               <version>0.7.1</version>
+               <version>0.7.0</version>
                <type>apklib</type>
                <exclusions>
                   <exclusion>
