Issue #18: Remove all Network IO off UI thread.
This refactors all network io so that it uses indiviual IntentServices.
Each of the REST network calls that need to occur happesn with an
IntentService dedicated to that task. This affected most of the
Browsing code and the Main Menu screen.   Overall speed of displaying
the screens is better particularly around Movie and Episode Browsing.

--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -64,6 +64,15 @@
         
         
         <activity android:name=".ui.preferences.SerenityPreferenceActivity"></activity>
+        
+        <service android:name=".core.services.MainMenuIntentService"/>
+        <service android:name=".core.services.MoviesRetrievalIntentService"/>
+        <service android:name=".core.services.EpisodeRetrievalIntentService"/>
+        <service android:name=".core.services.MovieCategoryRetrievalIntentService"/>
+        <service android:name=".core.services.MovieSecondaryCategoryRetrievalIntentService"/>
+        <service android:name=".core.services.ShowRetrievalIntentService"/>
+        <service android:name=".core.services.ShowSeasonRetrievalIntentService"/>
+        
     </application>
 
 </manifest>
