--- a/plexapp-rest-library/pom.xml
+++ b/plexapp-rest-library/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>com.github.kingargyle.plexapplibrary</groupId>
       <artifactId>plexapp-parent</artifactId>
-      <version>0.8.1</version>
+      <version>0.9.0-SNAPSHOT</version>
    </parent>
 
    <artifactId>plexapp-rest-library</artifactId>
