Add thirdparty repository information and google analytics mobile dependency
This adds the necessary repository information for retrieving the bugsense
and google analytics jars used as part of the build.  The repository is
hosted in the page repository on github.

--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,17 @@
      <module>tests</module>
    </modules>
 
+   <repositories>
+      <repository>
+        <id>serenity-thirdparty-repo</id>
+        <url>http://kingargyle.github.com/repo</url>
+        <layout>default</layout>
+        <releases>
+           <enabled>true</enabled>
+           <updatePolicy>always</updatePolicy>
+           <checksumPolicy>warn</checksumPolicy>
+        </releases>
+      </repository>
+   </repositories>
+
 </project>
