--- a/PlexAppClient/pom.xml
+++ b/PlexAppClient/pom.xml
@@ -34,6 +34,11 @@
           <artifactId>bugsense</artifactId>
           <version>3.2</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.analytics</groupId>
+          <artifactId>mobile-analytics</artifactId>
+          <version>2.0</version>
+      </dependency>
    </dependencies>
 
    <build>
