--- a/PlexAppClient/AndroidManifest.xml
+++ b/PlexAppClient/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.kingargyle.plexappclient"
     android:versionCode="1"
-    android:versionName="0.9.0" >
+    android:versionName="0.9.0-SNAPSHOT" >
 
     <uses-sdk
         android:minSdkVersion="12"
