--- a/PlexAppClient/pom.xml
+++ b/PlexAppClient/pom.xml
@@ -39,6 +39,11 @@
           <artifactId>mobile-analytics</artifactId>
           <version>2.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.teleal.cling</groupId>
+        <artifactId>cling-core</artifactId>
+        <version>1.0.5</version>
+      </dependency>
    </dependencies>
 
    <build>
