--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -80,14 +80,29 @@
          <plugin>
             <groupId>com.jayway.maven.plugins.android.generation2</groupId>
             <artifactId>android-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                   <id>alignApk</id>
+                   <phase>install</phase>
+                   <goals>
+                     <goal>zipalign</goal>
+                   </goals>
+               </execution>
+            </executions>
             <configuration>
                <sdk>
                   <platform>13</platform>
                </sdk>
                <deleteConflictingFiles>true</deleteConflictingFiles>
+               <zipalign>
+                 <verbose>true</verbose>
+                 <skip>false</skip>
+                 <inputApk>${project.build.directory}/Serenity-${version}.apk</inputApk>
+                 <outputApk>${project.build.directory}/Serenity-${version}-aligned.apk</outputApk>
+               </zipalign>
                <proguard>
                  <skip>true</skip>
-                 <proguardJarPath>${env.ANDROID_HOME}tools/proguard/lib/proguard.jar</proguardJarPath>
+                 <proguardJarPath>${env.ANDROID_HOME}/tools/proguard/lib/proguard.jar</proguardJarPath>
                </proguard>               
             </configuration>
             <extensions>true</extensions>
@@ -105,4 +120,52 @@
          </plugin>
       </plugins>
    </build>
+   <profiles>
+        <profile>
+            <id>sign</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <version>1.2</version>
+                        <executions>
+                            <execution>
+                                <id>signing</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <inherited>true</inherited>
+                                <configuration>
+                                    <archiveDirectory></archiveDirectory>
+                                    <includes>
+                                        <include>target/*.apk</include>
+                                    </includes>
+                                    <keystore>${env.KEYSTORE}</keystore>
+                                    <storepass>${env.KEYSTORE_PASSWORD}</storepass>
+                                    <keypass>${env.KEY_PASSWORD}</keypass>
+                                    <alias>nineworlds-key</alias>
+                                    <arguments>
+                                      <argument>-sigalg</argument><argument>MD5withRSA</argument>
+                                      <argument>-digestalg</argument><argument>SHA1</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                        <artifactId>android-maven-plugin</artifactId>
+                        <inherited>true</inherited>
+                        <configuration>
+                            <sign>
+                                <debug>false</debug>
+                            </sign>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
