Issue #35: Add Able Remote support for playback on TV.
This moves the preferences around, but more importantly adds initial support
for using Able Remote to play back a video on the TV.  Future versions may
interface with the Anymote protocol directly and only launch able for
video controls.  It is out of scope for Serenity to provide full video
remote controls currently.

There is some code to try and get Serenity to be a player for Able but
it currently isn't responding to the appropriate intents.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -40,7 +40,6 @@
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             
@@ -68,6 +67,12 @@
             android:name="us.nineworlds.serenity.ui.video.player.SerenitySurfaceViewVideoActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />                
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>                        
         </activity>  
         
         <activity android:name=".ui.preferences.SerenityPreferenceActivity"
