--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="us.nineworlds.serenity"
     android:versionCode="1"
-    android:versionName="0.10.0-dev" >
+    android:versionName="0.10.0-dev" xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk
         android:minSdkVersion="12"
@@ -88,7 +88,7 @@
         <service android:name=".core.services.ShowSeasonRetrievalIntentService"/>
         <service android:name=".core.services.TVShowCategoryRetrievalIntentService"/>
         
-        <service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl"/>         
+        <service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl" tools:ignore="MissingRegistered"/>         
     </application>
 
 </manifest>
