--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -39,6 +39,11 @@
         <artifactId>cling-core</artifactId>
         <version>1.0.5</version>
       </dependency>
+      <dependency>
+        <groupId>com.integralblue</groupId>
+        <artifactId>httpresponsecache</artifactId>
+        <version>1.3</version>
+      </dependency>
    </dependencies>
 
    <build>
