--- a/tests/plexapp-rest-library-tests/pom.xml
+++ b/tests/plexapp-rest-library-tests/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>plexapp-tests-parent</artifactId>
-      <version>0.11.0-SNAPSHOT</version>
+      <version>0.11.0</version>
    </parent>
 
    <artifactId>plexapp-rest-library-tests</artifactId>
@@ -21,7 +21,7 @@
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>0.11.0-SNAPSHOT</version>
+         <version>0.11.0</version>
          <type>apklib</type>
          <exclusions>
             <exclusion>
