--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>0.11.0</version>
+      <version>1.0.0-SNAPSHOT</version>
    </parent>
 
    <groupId>us.nineworlds.serenity</groupId>
@@ -21,7 +21,7 @@
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>0.11.0</version>
+         <version>1.0.0-SNAPSHOT</version>
          <type>apklib</type>
       </dependency>      
       <dependency>
