--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -23,26 +23,28 @@
          <artifactId>plexapp-rest-library</artifactId>
          <version>1.0.0-SNAPSHOT</version>
          <type>apklib</type>
-      </dependency>      
+      </dependency>
+      <!-- <dependency> <groupId>com.novoda.imageloader</groupId> <artifactId>imageloader-core</artifactId> <version>1.5.8</version> 
+         </dependency> -->
       <dependency>
-         <groupId>com.novoda.imageloader</groupId>
-         <artifactId>imageloader-core</artifactId>
-         <version>1.5.8</version> 
-       </dependency>
-      <dependency>
-          <groupId>com.google.analytics</groupId>
-          <artifactId>mobile-analytics</artifactId>
-          <version>2.0</version>
+         <groupId>com.nostra13.universalimageloader</groupId>
+         <artifactId>universal-image-loader</artifactId>
+         <version>1.8.2</version>
       </dependency>
       <dependency>
-        <groupId>org.teleal.cling</groupId>
-        <artifactId>cling-core</artifactId>
-        <version>1.0.5</version>
+         <groupId>com.google.analytics</groupId>
+         <artifactId>mobile-analytics</artifactId>
+         <version>2.0</version>
       </dependency>
       <dependency>
-        <groupId>com.integralblue</groupId>
-        <artifactId>httpresponsecache</artifactId>
-        <version>1.3</version>
+         <groupId>org.teleal.cling</groupId>
+         <artifactId>cling-core</artifactId>
+         <version>1.0.5</version>
+      </dependency>
+      <dependency>
+         <groupId>com.integralblue</groupId>
+         <artifactId>httpresponsecache</artifactId>
+         <version>1.3</version>
       </dependency>
    </dependencies>
 
@@ -82,11 +84,11 @@
             <artifactId>android-maven-plugin</artifactId>
             <executions>
                <execution>
-                   <id>alignApk</id>
-                   <phase>install</phase>
-                   <goals>
+                  <id>alignApk</id>
+                  <phase>install</phase>
+                  <goals>
                      <goal>zipalign</goal>
-                   </goals>
+                  </goals>
                </execution>
             </executions>
             <configuration>
@@ -95,15 +97,15 @@
                </sdk>
                <deleteConflictingFiles>true</deleteConflictingFiles>
                <zipalign>
-                 <verbose>true</verbose>
-                 <skip>false</skip>
-                 <inputApk>${project.build.directory}/Serenity-${version}.apk</inputApk>
-                 <outputApk>${project.build.directory}/Serenity-${version}-aligned.apk</outputApk>
+                  <verbose>true</verbose>
+                  <skip>false</skip>
+                  <inputApk>${project.build.directory}/Serenity-${version}.apk</inputApk>
+                  <outputApk>${project.build.directory}/Serenity-${version}-aligned.apk</outputApk>
                </zipalign>
                <proguard>
-                 <skip>true</skip>
-                 <proguardJarPath>${env.ANDROID_HOME}/tools/proguard/lib/proguard.jar</proguardJarPath>
-               </proguard>               
+                  <skip>true</skip>
+                  <proguardJarPath>${env.ANDROID_HOME}/tools/proguard/lib/proguard.jar</proguardJarPath>
+               </proguard>
             </configuration>
             <extensions>true</extensions>
          </plugin>
@@ -121,51 +123,53 @@
       </plugins>
    </build>
    <profiles>
-        <profile>
-            <id>sign</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jarsigner-plugin</artifactId>
-                        <version>1.2</version>
-                        <executions>
-                            <execution>
-                                <id>signing</id>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                                <phase>package</phase>
-                                <inherited>true</inherited>
-                                <configuration>
-                                    <archiveDirectory></archiveDirectory>
-                                    <includes>
-                                        <include>target/*.apk</include>
-                                    </includes>
-                                    <keystore>${env.KEYSTORE}</keystore>
-                                    <storepass>${env.KEYSTORE_PASSWORD}</storepass>
-                                    <keypass>${env.KEY_PASSWORD}</keypass>
-                                    <alias>nineworlds-key</alias>
-                                    <arguments>
-                                      <argument>-sigalg</argument><argument>MD5withRSA</argument>
-                                      <argument>-digestalg</argument><argument>SHA1</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                        <artifactId>android-maven-plugin</artifactId>
+      <profile>
+         <id>sign</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-jarsigner-plugin</artifactId>
+                  <version>1.2</version>
+                  <executions>
+                     <execution>
+                        <id>signing</id>
+                        <goals>
+                           <goal>sign</goal>
+                        </goals>
+                        <phase>package</phase>
                         <inherited>true</inherited>
                         <configuration>
-                            <sign>
-                                <debug>false</debug>
-                            </sign>
+                           <archiveDirectory></archiveDirectory>
+                           <includes>
+                              <include>target/*.apk</include>
+                           </includes>
+                           <keystore>${env.KEYSTORE}</keystore>
+                           <storepass>${env.KEYSTORE_PASSWORD}</storepass>
+                           <keypass>${env.KEY_PASSWORD}</keypass>
+                           <alias>nineworlds-key</alias>
+                           <arguments>
+                              <argument>-sigalg</argument>
+                              <argument>MD5withRSA</argument>
+                              <argument>-digestalg</argument>
+                              <argument>SHA1</argument>
+                           </arguments>
                         </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
+                  <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                  <artifactId>android-maven-plugin</artifactId>
+                  <inherited>true</inherited>
+                  <configuration>
+                     <sign>
+                        <debug>false</debug>
+                     </sign>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>
 </project>
