--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -3,6 +3,14 @@
     package="us.nineworlds.serenity"
     android:versionCode="1"
     android:versionName="1.0.0-SNAPSHOT" xmlns:tools="http://schemas.android.com/tools">
+    
+    <!--  try to exclude phone devices from the list. Currently only support Tablets and TVs -->
+    <supports-screens android:smallScreens="false"
+        android:normalScreens="false"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        android:requiresSmallestWidthDp="200"/>
+    
 
     <uses-sdk
         android:minSdkVersion="12"
