--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -4,16 +4,17 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.0.3</version>
+      <version>1.1.0-SNAPSHOT</version>
 
    </parent>
 
    <artifactId>plexapp-tests-parent</artifactId>
-   <version>1.0.3</version>
+   <version>1.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
    <modules>
      <module>plexapp-rest-library-tests</module>
+     <module>serenity-app-tests</module>
    </modules>
 
 </project>
