--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project>
    <modelVersion>4.0.0</modelVersion>
    <name>PlexApp Google TV Client Parent</name>
@@ -12,7 +13,8 @@
      <module>leftnavbarlibrary</module>
      <module>serenity-app</module>
      <module>tests</module>
-   </modules>
+     <module>subtitle-converter</module>
+  </modules>
 
    <repositories>
       <repository>
