--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -46,6 +46,12 @@
          <artifactId>httpresponsecache</artifactId>
          <version>1.3</version>
       </dependency>
+      <dependency>
+         <groupId>us.nineworlds.serenity</groupId>
+         <artifactId>subtitle-converter</artifactId>
+         <version>1.1.0-SNAPSHOT</version>
+      </dependency>
+      
    </dependencies>
 
    <build>
