Issue #57: Replace Existing DownloadManager Service
Replaced the built in service with a new one built off the DownDroid projects
source code. This was modified so that it could handle files larger than
2gb, reads in 8k chunks instead of 1K, and accepts a destination directory
and user defined filename.

Items still to complete.
* Viewing the Queued downloads and progress.
* Better Notification integration.
* Canceling the downloads.
* pausing and resuming the downloads.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -116,6 +116,8 @@
         <service android:name=".core.services.TVShowCategoryRetrievalIntentService"/>
         <service android:name=".core.services.MovieSearchIntentService"/>    
         <service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl" tools:ignore="MissingRegistered"/>
+        <service android:name="com.castillo.dd.DownloadService" tools:ignore="MissingRegistered"/>
+        
         
         
         <provider android:name="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider"
