Issue #72: Add Grid View for Movie Browsing.
Implemented a Grid view for movie browsing.  This grid is 3 x 8. So it
displays a max of 24 items at a time.

Using PgUp/PgDwn on the remote will scroll a page at a time through
the available items.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
    <modules>
      <module>plexapp-rest-library</module>
      <module>leftnavbarlibrary</module>
+     <module>two-way-gridview</module>
      <module>serenity-app</module>
      <module>tests</module>
      <module>subtitle-converter</module>
