--- a/two-way-gridview/project.properties
+++ b/two-way-gridview/project.properties
@@ -8,9 +8,10 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+#proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
+# Indicates whether an apk should be generated for each density.
+split.density=false
 # Project target.
-target=android-13
-android.library.reference.1=../plexapp-rest-library
-android.library.reference.2=../two-way-gridview
+target=android-12
+android.library=true
