--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -7,7 +7,6 @@
       <version>1.2.0-SNAPSHOT</version>
    </parent>
 
-   <groupId>us.nineworlds.serenity</groupId>
    <artifactId>serenity-app</artifactId>
    <packaging>apk</packaging>
 
@@ -24,8 +23,13 @@
          <version>1.2.0-SNAPSHOT</version>
          <type>apklib</type>
       </dependency>
-      <!-- <dependency> <groupId>com.novoda.imageloader</groupId> <artifactId>imageloader-core</artifactId> <version>1.5.8</version> 
-         </dependency> -->
+<!--       <dependency>
+         <groupId>us.nineworlds.serenity</groupId>
+         <artifactId>two-way-gridview</artifactId>
+         <version>1.2.0-SNAPSHOT</version>
+         <type>apklib</type>
+      </dependency>
+-->      
       <dependency>
          <groupId>com.nostra13.universalimageloader</groupId>
          <artifactId>universal-image-loader</artifactId>
@@ -51,7 +55,7 @@
          <artifactId>subtitle-converter</artifactId>
          <version>1.2.0-SNAPSHOT</version>
       </dependency>
-      
+
    </dependencies>
 
    <build>
