Add git flow release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,17 @@
       </repository>
    </repositories>
 
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>com.atlassian.maven.plugins</groupId>
+            <artifactId>maven-jgitflow-plugin</artifactId>
+            <version>1.0-alpha7</version>
+            <configuration>
+               <autoVersionSubmodules>true</autoVersionSubmodules>
+            </configuration>
+        </plugin>
+      </plugins>
+   </build>
+
 </project>
