updating develop with hotfix versions to avoid merge conflicts

--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,10 @@
    </build>
 
     <scm>
-        <connection>scm:git:git@github.com:NineWorlds/serenity-android.git</connection>
-        <developerConnection>scm:git:git@github.com:NineWorlds/serenity-android.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com:NineWorlds/serenity-android.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:NineWorlds/serenity-android.git</developerConnection>
         <url>https://github.com/nineworlds/serenity-android</url>
-        <tag>1.2.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
