--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>plexapp-tests-parent</artifactId>
-      <version>1.3.0-SNAPSHOT</version>
+      <version>1.2.2</version>
    </parent>
 
    <artifactId>serenity-app-tests</artifactId>
